Add chapters and sections

--- a/main.tex
+++ b/main.tex
@@ -8,4 +8,24 @@
 
 \title{relazione}
 
+\chapter{Analisi dei requisiti}
+\section{Intervista}
+\section{Rilevamento delle ambiguità e correzioni proposte}
+\section{Definizione delle specifiche in linguaggio naturale ed estrazione dei concetti principali}
+\chapter{Progettazione Concettuale}
+\section{Schema scheletro}
+\section{Raffinamenti proposti}
+\section{Schema concettuale finale}
+\chapter{Progettazione logica}
+\section{Stima del volume dei dati}
+\section{Descrizione delle operazioni principali e stima della loro frequenza}
+\section{Schemi di navigazione e tabelle degli accessi}
+\section{Raffinamento dello schema (eliminazione di identificatori esterni, attributi composti e gerarchie, scelta delle chiavi)}
+\section{Analisi delle ridondanze}
+\section{Traduzione di entità e associazioni in relazioni}
+\section{Schema relazionale finale}
+\section{Traduzione delle operazioni in query SQL}
+\chapter{Progettazione dell'applicazione}
+\section{Descrizione dell'architettura dell'applicazione realizzata con obbligo di inserire alcuni screenshot dell'interfaccia utente}
+
 \end{document}
