--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,17 @@
 
 \chapter{Analisi dei requisiti}
 \section{Intervista}
+Vogliamo sviluppare un social network puramente testuale.
+Gli utenti possono iscriversi e disicriversi. Al momento dell'iscrizione l'utente inserisce le sue generalità, opzionalmente la propria locazione, una email e decide un nome utente univoco e una password.
+L'utente può cambiare la sua password ma non può riutilizzare una password precedente.
+Ogni utente può pubblicare dei post. Un post consiste in un testo scritto, opzionalmente accompagnato da una locazione decisa dall'autore.
+Ogni utente può commentare i post e rispondere ad altri commenti.
+L'utente può correggere post e commenti.
+Ogni utente può mettere like e dislike a post e commenti.
+Gli utenti inoltre possono seguire altri utenti.
+Gli utenti possono chattare con altri utenti. Le chat si compongono di messaggi inviati da utenti. Ogni messaggio ha un suo autore, un timestamp di invio e, dopo essere stato letto, un timestamp di lettura.
+Ogni utente può creare un gruppo. Un gruppo è una aggregazione di uno o più utenti. Ogni gruppo ha uno o più utenti amministratori.
+Ogni gruppo ha una e una sola chat interna a cui possono partecipare solo gli utenti membri.
 \section{Rilevamento delle ambiguità e correzioni proposte}
 \section{Definizione delle specifiche in linguaggio naturale ed estrazione dei concetti principali}
 \chapter{Progettazione Concettuale}
