minor improvements to interview

--- a/main.tex
+++ b/main.tex
@@ -13,9 +13,11 @@
 Vogliamo sviluppare un social network puramente testuale.
 Gli utenti possono iscriversi e disicriversi. Al momento dell'iscrizione l'utente inserisce le sue generalità, opzionalmente la propria locazione, una email e decide un nome utente univoco e una password.
 L'utente può cambiare la sua password ma non può riutilizzare una password precedente.
-Ogni utente può pubblicare dei post. Un post consiste in un testo scritto, opzionalmente accompagnato da una locazione decisa dall'autore.
+Ogni utente può pubblicare dei post. Un post consiste in un testo scritto, opzionalmente accompagnato da una locazione decisa dall'autore. 
+Per ogni post Viene anche registrata la timestamp.
 Ogni utente può commentare i post e rispondere ad altri commenti.
 L'utente può correggere post e commenti.
+L'utente ha una reputazione, definita come il numero di like totali ricevuti meno il numero totale di dislike ricevuti.
 Ogni utente può mettere like e dislike a post e commenti.
 Gli utenti inoltre possono seguire altri utenti.
 Gli utenti possono chattare con altri utenti. Le chat si compongono di messaggi inviati da utenti. Ogni messaggio ha un suo autore, un timestamp di invio e, dopo essere stato letto, un timestamp di lettura.
