--- a/main.tex
+++ b/main.tex
@@ -23,8 +23,26 @@ Gli utenti inoltre possono seguire altri utenti.
 Gli utenti possono chattare con altri utenti. Le chat si compongono di messaggi inviati da utenti. Ogni messaggio ha un suo autore, un timestamp di invio e, dopo essere stato letto, un timestamp di lettura.
 Ogni utente può creare un gruppo. Un gruppo è una aggregazione di uno o più utenti. Ogni gruppo ha uno o più utenti amministratori.
 Ogni gruppo ha una e una sola chat interna a cui possono partecipare solo gli utenti membri.
-\section{Rilevamento delle ambiguità e correzioni proposte}
 \section{Definizione delle specifiche in linguaggio naturale ed estrazione dei concetti principali}
+Vogliamo sviluppare un social network puramente testuale.
+Gli \textbf{utenti} possono iscriversi e disicriversi. Al momento dell'iscrizione l'utente inserisce le sue generalità, opzionalmente la propria locazione, una email e decide un nome utente univoco e una password.
+L'utente può cambiare la sua password ma non può riutilizzare una password precedente.
+Ogni utente può pubblicare dei \textbf{post}. Un post consiste in un testo scritto, opzionalmente accompagnato da una locazione decisa dall'autore (cioè l'utente che ha scritto il post).
+Ogni utente può \textbf{commentare} i post e rispondere ad altri commenti.
+L'utente può correggere post e commenti.
+Ogni utente può mettere \textbf{like} e dislike a post e commenti.
+Gli utenti inoltre possono \textbf{seguire} altri utenti.
+Gli utenti possono chattare con altri utenti. Le \textbf{chat} si compongono di messaggi inviati da utenti. Ogni \textbf{messaggio} ha un suo autore, un timestamp di invio e, dopo essere stato letto, un timestamp di lettura.
+Ogni utente può creare un \textbf{gruppo}. Un gruppo è una aggregazione di uno o più utenti. Ogni gruppo ha uno o più utenti amministratori.
+Ogni gruppo ha una e una sola chat interna a cui possono partecipare solo gli utenti membri.
+\section{Definizioni}
+Utente: un iscritto al nostro social network. Sinonimi: iscritto \newline
+Post: un testo scritto da un utente 
+Autore di un post: l'utente che ha scritto il post
+Commento: un post che fa riferimento ad un altro post (detto post padre)
+Like: è una segnalazione di gradimento ad un post
+Dislkie: l'opposto di un like
+Reputazione di un utente: la differenza tra like e dislike complessivi dei post scritti dall'utente
 \chapter{Progettazione Concettuale}
 \section{Schema scheletro}
 \section{Raffinamenti proposti}
