Add entries to the glossary (dictionary)

--- a/main.tex
+++ b/main.tex
@@ -43,6 +43,11 @@ Commento: un post che fa riferimento ad un altro post (detto post padre)
 Like: è una segnalazione di gradimento ad un post
 Dislkie: l'opposto di un like
 Reputazione di un utente: la differenza tra like e dislike complessivi dei post scritti dall'utente
+Messaggio: un testo scritto da un utente con destinatario un gruppo
+Chat: una sequenza di messaggi
+Gruppo: un insieme di utenti 
+Locazione: un luogo geografico da cui l'utente ha scritto un post
+Amministratore di un gruppo: un utente che può aggiungere e rimuovere utenti dal gruppo
 \chapter{Progettazione Concettuale}
 \section{Schema scheletro}
 \section{Raffinamenti proposti}
