Add description of admin users mechanics to requirements

--- a/report/main.tex
+++ b/report/main.tex
@@ -33,7 +33,7 @@ L'utente può correggere post e commenti.
 Ogni utente può mettere \textbf{like} e dislike a post e commenti.
 Gli utenti inoltre possono \textbf{seguire} altri utenti.
 Gli utenti possono chattare con altri utenti. Le \textbf{chat} si compongono di messaggi inviati da utenti. Ogni \textbf{messaggio} ha un suo autore, un timestamp di invio e, dopo essere stato letto, un timestamp di lettura.
-Ogni utente può creare un \textbf{gruppo}. Un gruppo è una aggregazione di uno o più utenti. Ogni gruppo ha uno o più utenti amministratori.
+Ogni utente può creare un \textbf{gruppo}. Un gruppo è una aggregazione di uno o più utenti. Ogni gruppo ha uno o più utenti amministratori. Gli\textbf{amministratori} possono far entrare nuovi membri nelle chat di cui sono amministratori. Gli amministratori hanno diritto di cacciare degli utenti dalla chat, eventualmente comunicando una motivazione. Gli utenti possono uscire volontariamente dalle chat a cui appartengono, scrivendo eventualmente una motivazione della loro uscita.
 Ogni gruppo ha una e una sola chat interna a cui possono partecipare solo gli utenti membri.
 \section{Definizioni}
 \begin{itemize}
