Split read profile operation into 3 simpler operations

--- a/report/main.tex
+++ b/report/main.tex
@@ -120,7 +120,9 @@ Per modellizzare la possibilità da parte degli utenti di mettere like e dislike
       \item Reagire con Like/dislike a post e commenti 80 / g
       \item Scorrere i post pubblicati dagli utenti seguiti (feed) 40 / g
       \item Vedere utenti che hanno messo like a un post 1 / g
-      \item Vedere profilo utente (nome, cognome, data di nascita, location, reputazione, post) 5 / g
+      \item Vedere profilo utente (nome, cognome, data di nascita, location) 5 / g
+      \item Vedere i post pubblicati da un utente
+      \item Vedere la reputazione di un utente
     \end{itemize} 
   }
   \item {
