Add volumes for PUBBLICAZIONE and CONTENUTO

--- a/report/main.tex
+++ b/report/main.tex
@@ -95,6 +95,8 @@ Per modellizzare la possibilità da parte degli utenti di mettere like e dislike
   \item SEGUE, E, 100.000
   \item SEGUIRE E, 100.000
   \item MEMBRO, E, 20000
+  \item PUBBLICAZIONE, R, 20000
+  \item CONTENUTO, E, 20000
   \item IMPERSONAZIONE, R, 20000
   \item APPARTENENZA, R, 20000
   \item CHAT, E, 2000 
