--- a/report/main.tex
+++ b/report/main.tex
@@ -97,6 +97,7 @@ Per modellizzare la possibilità da parte degli utenti di mettere like e dislike
   \item MEMBRO, E, 20000
   \item PUBBLICAZIONE, R, 20000
   \item CONTENUTO, E, 20000
+  \item REAZIONE, R, 30000
   \item IMPERSONAZIONE, R, 20000
   \item APPARTENENZA, R, 20000
   \item CHAT, E, 2000 
