Add some missing cardinalities to volumes table

--- a/report/main.tex
+++ b/report/main.tex
@@ -97,7 +97,8 @@ Per modellizzare la possibilità da parte degli utenti di mettere like e dislike
   \item MEMBRO, E, 20000
   \item AMMINISTRATORE, E, 4000
   \item PUBBLICAZIONE, R, 20000
-  \item CONTENUTO, E, 20000
+  \item POST, E, 20000
+  \item COMMENTO, E, 200.000
   \item REAZIONE, R, 2.000.000
   \item IMPERSONAZIONE, R, 20000
   \item APPARTENENZA, R, 20000
