--- a/report/main.tex
+++ b/report/main.tex
@@ -177,92 +177,185 @@ Per modellizzare la possibilità da parte degli utenti di mettere like e dislike
 \subsection{Creare un nuovo utente}
 \paragraph{Descrizione} Aggiungere alla tabella degli utenti una nuova riga e assegnargli una password 
 \paragraph{Frequenza} 10 / g 
-\paragraph{Tavola degli accessi}
-
+\begin{table}[h]
+\paragraph{Tavola degli accessi\newline}
+\begin{tabular}{|c|c|c|c|}
+\hline
+Concetto          & Costrutto & Accessi & Tipo \\ \hline
+UTENTE            & E         & 1       & W    \\ \hline
+SCELTA           & A         & 1       & W    \\ \hline
+STORICO\_PASSWORD & E         & 1       & W    \\ \hline
+\textit{TOTALE}   &           & 6       &      \\ \hline
+\end{tabular}
+\end{table}
 \subsection{Cambiare password}
 \paragraph{Descrizione} Aggiungere alla tabella dello storico password una nuova riga. 
 \paragraph{Frequenza} 1 / 60 g 
-\paragraph{Tavola degli accessi}
-
+\begin{table}[h]
+\paragraph{Tavola degli accessi\newline}
+\begin{tabular}{|c|c|c|c|}
+\hline
+Concetto          & Costrutto & Accessi & Tipo \\ \hline
+UTENTE            & E         & 1       & R    \\ \hline
+SCELTA            & A         & 1       & W    \\ \hline
+STORICO\_PASSWORD & E         & 1       & W    \\ \hline
+\textit{TOTALE}   &           & 5       &      \\ \hline
+\end{tabular}
+\end{table}
 \subsection{Autenticazione dell'utente all'interno del social network tramite username e password}
 \paragraph{Descrizione} Si controlla se esiste istanza di STORICO\_PASSWORD contentente l'username e la password inserite
 \paragraph{Frequenza} 10 / g
-
+\begin{table}[h]
+\paragraph{Tavola degli accessi\newline}
+\begin{tabular}{|c|c|c|c|}
+\hline
+Concetto          & Costrutto & Accessi & Tipo \\ \hline
+UTENTE            & E         & 1       & R    \\ \hline
+SCELTA            & A         & 1       & R    \\ \hline
+STORICO\_PASSWORD & E         & 5       & R    \\ \hline
+ACCESSO           & A         & 1       & W    \\ \hline
+STORICO\_ACCESSO  & E         & 1       & W    \\ \hline
+TOTALE            &           & 11      &      \\ \hline
+\end{tabular}
+\end{table}
 \subsection{Seguire un utente} 
 \paragraph{Descrizione} Si aggiunge una istanza alla tabella SEGUIRE avente come chiave la tupla (utente seguace, utente seguito)
 \paragraph{Frequenza} 2 / g
-
+\begin{table}[h]
+\paragraph{Tavola degli accessi\newline}
+\begin{tabular}{|c|c|c|c|}
+\hline
+Concetto & Costrutto & Accessi & Tipo \\ \hline
+UTENTE   & E         & 1       & R    \\ \hline
+SEGUE    & A         & 1       & W    \\ \hline
+SEGUIRE  & E         & 1       & W    \\ \hline
+UTENTE   & E         & 1       & R    \\ \hline
+TOTALE   &           & 6       &      \\ \hline
+\end{tabular}
+\end{table}
 \subsection{Smettere di seguire un utente}
 \paragraph{Descrizione} Si accede all'istanza di SEGUIRE identificata dalla tupla (utente seguace, utente seguito) e si aggiunge assegna al campo DataFine la data attuale.
 \paragraph{Frequenza} 1 / 10 g
-
+\begin{table}[h]
+\paragraph{Tavola degli accessi\newline}
+\begin{tabular}{|c|c|c|c|}
+\hline
+Concetto & Costrutto & Accessi & Tipo \\ \hline
+UTENTE   & E         & 1       & R    \\ \hline
+SEGUE    & A         & 1       & R    \\ \hline
+SEGUIRE  & E         & 1       & W    \\ \hline
+UTENTE   & E         & 1       & R    \\ \hline
+TOTALE   &           & 5       &      \\ \hline
+\end{tabular}
+\end{table}
 \subsection{Creare una nuova chat}
 \paragraph{Descrizione} Viene creato una nuova istanza di CHAT e un primo membro amminstratore della chat.
 \paragraph{Frequenza} 1 / 20 g
-
+\begin{table}[h]
+\paragraph{Tavola degli accessi\newline}
+\begin{tabular}{|c|c|c|c|}
+\hline
+Concetto       & Costrutto & Accessi & Tipo \\ \hline
+UTENTE         & E         & 1       & R    \\ \hline
+IMPERSONAZIONE & A         & 1       & W    \\ \hline
+AMMINISTRATORE & E         & 1       & W    \\ \hline
+APPARTENENZA   & A         & 1       & W    \\ \hline
+CHAT           & E         & 1       & W    \\ \hline
+TOTALE         &           & 9       &      \\ \hline
+\end{tabular}
+\end{table}
 \subsection{Postare e commentare}
 \paragraph{Descrizione}
 \paragraph{Frequenza} 10 / g
-
+\begin{table}[t]
+\paragraph{Tavola degli accessi\newline}
+\begin{tabular}{|c|c|c|c|}
+\hline
+Concetto             & Costrutto & Accessi & Tipo \\ \hline
+CONTENUTO            & E         & 1       & W    \\ \hline
+PUBBLICAZIONE        & A         & 1       & W    \\ \hline
+UTENTE               & E         & 1       & R    \\ \hline
+LUOGO\_PUBBLICAZIONE & A         & 1       & W    \\ \hline
+REGIONE              & E         & 1       & R    \\ \hline
+RISPOSTA             & A         & 1       & W    \\ \hline
+CONTENUTO            & E         & 1       & R    \\ \hline
+TOTALE               &           & 11      &      \\ \hline
+\end{tabular}
+\end{table}
 \subsection{Reagire con like/dislike a post e commenti}
 \paragraph{Descrizione} Si aggiunge una istanza alla tabella reazione con identificatore la tupla (utente, contenuto) e nel campo LikeDislike +1 se è un like, -1 se è un dislike.
 \paragraph{Frequenza} 80 / g
+\paragraph{Tavola degli accessi}
 
 \subsection{Leggere un post}
 \paragraph{Descrizione} Si mostrano il contentuto, l'ora di pubblicazione, l'autore, i commenti, il numero di like netto (cioè la somma algebrica dei like e dislike), se presente il luogo di pubblicazione.
 \paragraph{Frequenza} 100 / g
+\paragraph{Tavola degli accessi}
 
 \subsection{Scorrere il post pubblicati dagli utenti seguiti (feed)}
 \paragraph{Descrizione} Questa operazione mostra in ordine cronologico i titoli, il numero di like netto e l'autore dei post pubblicati dagli utenti seguiti.
 \paragraph{Frequenza} 40 / g
+\paragraph{Tavola degli accessi}
 
 \subsection{Vedere quali utenti hanno reagito ad un contenuto}
 \paragraph{Descrizione} Si scorre la tabella REAZIONE e si estraggono tutte quelle in cui appare il contentuto cercato. 
 \paragraph{Frequenza} 1 / g
+\paragraph{Tavola degli accessi}
 
 \subsection{Vedere il profilo di un utente}
 \paragraph{Descrizione} Si mostrano nome , cognome, data di nascita, location e la sua reputazione.
 \paragraph{Frequenza} 5 / g
+\paragraph{Tavola degli accessi}
 
 \subsection{Vedere i contenuti pubblicati da un utente}
 \paragraph{Descrizione} Si mostrano tutti i contenuti che hanno come autore l'utente considerato
 \paragraph{Frequanza} 1 / g
+\paragraph{Tavola degli accessi}
 
 \subsection{Scrivere un messaggio nella chat}
 \paragraph{Descrizione} Si aggiunge una istanza nella tabella MESSAGGIO con una referenza esterna al membro autore.
 \paragraph{Frequenza} 50 / g 
+\paragraph{Tavola degli accessi}
 
 \subsection{Uscire volontariamente dalla chat}
 \paragraph{Descrizione} Nell'istanza del membro che sta uscendo si aggiunge una referenza ad una nuova istanza USCITA di tipo VOLONTARIA.
 \paragraph{Frequenza} 1 / 100 g 
+\paragraph{Tavola degli accessi}
 
 \subsection{Elencare i membri attuali della chat}
 \paragraph{Descrizione} Vengono elencati gli username, ruolo e data di entrata degli utenti membri della chat.
 \paragraph{Frequenza} 1 / g
+\paragraph{Tavola degli accessi}
 
 \subsection{Leggere i messaggi della chat}
 \paragraph{Descrizione} Ordinati dal più recente al più vecchio vengono mostrati il contenuto dei messaggi, il mittente, un eventuale messaggio citato e un eventuale contenuto in riferimento. Verranno ignorati i messaggi eliminati.
 \paragraph{Frequenza} 90 / g
+\paragraph{Tavola degli accessi}
 
 \subsection{Aggiungere utenti al gruppo}
 \paragraph{Descrizione} Viene creata una nuova istanza nella tabella MEMBRO che fa riferimento all'utente aggiunto, alla chat in cui è stato inserito, la data di entrata e il membro amministratore che lo ha aggiunto.
 \paragraph{Frequenza} 1 / g
+\paragraph{Tavola degli accessi}
 
 \subsection{Dare diritti amministratore ad un utente in un gruppo}
 \paragraph{Descrizione} L'operazione viene svolta come una uscita volontaria da parte del membro candidato a diventare amministratore e il suo reinserimento come membro amministratore.
 \paragraph{Frequenza} 1 / 4 g
+\paragraph{Tavola degli accessi}
 
 \subsection{Cacciare un utente da un gruppo}
 \paragraph{Descrizione} Similmente a come avviene l'uscita volontaria, l'istanza del membro cacciato referenzierà una istanza della tabella USCITA del tipo ESILIO.
 \paragraph{Frequenza} 1 / 10 g
+\paragraph{Tavola degli accessi}
 
 \subsection{Eliminare un messaggio dalla chat}
 \paragraph{Descrizione} Verrà creata una istanza della relazione ELIMINAZIONE identificata dalla tupla (messaggio eliminato, amministratore responsabile della eliminazione).
 \paragraph{Frequenza} 5 / g
+\paragraph{Tavola degli accessi}
 
 \subsection{Aggiungere regione a tabella REGIONE}
 \paragraph{Descrizione} Viene creata una nuova istanza di REGIONE la quale conterrà la denominazione della regione e eventualmente la regione superiore.
 \paragraph{Frequenza} 1 / 100 g
+\paragraph{Tavola degli accessi}
 
 \section{Raffinamento dello schema (eliminazione di identificatori esterni, attributi composti e gerarchie, scelta delle chiavi)}
 \section{Analisi delle ridondanze}
